--- a/src/styles/tailwind.css
+++ b/src/styles/tailwind.css
@@ -631,12 +631,20 @@ body {
   top: 0px;
 }
 
+.top-10 {
+  top: 2.5rem;
+}
+
 .z-40 {
   z-index: 40;
 }
 
 .z-\[-1\] {
   z-index: -1;
+}
+
+.inline {
+  display: inline;
 }
 
 .flex {
@@ -649,6 +657,14 @@ body {
 
 .hidden {
   display: none;
+}
+
+.h-0 {
+  height: 0px;
+}
+
+.h-0\.5 {
+  height: 0.125rem;
 }
 
 .h-10 {
@@ -667,8 +683,8 @@ body {
   height: 2.25rem;
 }
 
-.h-\[var\(--star-tail-height\)\] {
-  height: var(--star-tail-height);
+.h-\[120\%\] {
+  height: 120%;
 }
 
 .h-fit {
@@ -680,8 +696,8 @@ body {
   height: 100%;
 }
 
-.h-\[120\%\] {
-  height: 120%;
+.h-\[50\%\] {
+  height: 50%;
 }
 
 .min-h-screen {
@@ -704,8 +720,8 @@ body {
   flex-grow: 1;
 }
 
-.translate-x-\[104em\] {
-  --tw-translate-x: 104em;
+.-rotate-45 {
+  --tw-rotate: -45deg;
   transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
 }
 
@@ -721,6 +737,63 @@ body {
 
 .transform {
   transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
+}
+
+@keyframes fall {
+  to {
+    transform: translate3d(-30em, 0, 0);
+  }
+}
+
+@keyframes blink {
+  50% {
+    opacity: 0.6;
+  }
+}
+
+.animate-blink {
+  animation: blink 2s linear infinite;
+}
+
+@keyframes fall {
+  to {
+    transform: translate3d(-30em, 0, 0);
+  }
+}
+
+.animate-fall {
+  animation: fall 9s linear infinite;
+}
+
+@keyframes tail-fade {
+  0% {
+    width: 6em;
+    opacity: 1;
+  }
+
+  50% {
+    width: 6em;
+    opacity: 1;
+  }
+
+  70% {
+    width: 0;
+    opacity: 0.4;
+  }
+
+  80% {
+    width: 0;
+    opacity: 0.4;
+  }
+
+  100% {
+    width: 0;
+    opacity: 0;
+  }
+}
+
+.animate-tail-fade {
+  animation: tail-fade 9s ease-out infinite;
 }
 
 .cursor-not-allowed {
@@ -751,6 +824,10 @@ body {
   --tw-space-x-reverse: 0;
   margin-right: calc(1rem * var(--tw-space-x-reverse));
   margin-left: calc(1rem * calc(1 - var(--tw-space-x-reverse)));
+}
+
+.overflow-hidden {
+  overflow: hidden;
 }
 
 .whitespace-nowrap {
@@ -818,18 +895,12 @@ body {
   background-color: hsl(var(--secondary));
 }
 
-.bg-gradient-to-r {
-  background-image: linear-gradient(to right, var(--tw-gradient-stops));
-}
-
 .bg-gradient-to-b {
   background-image: linear-gradient(to bottom, var(--tw-gradient-stops));
 }
 
-.from-current {
-  --tw-gradient-from: currentColor var(--tw-gradient-from-position);
-  --tw-gradient-to: rgb(255 255 255 / 0) var(--tw-gradient-to-position);
-  --tw-gradient-stops: var(--tw-gradient-from), var(--tw-gradient-to);
+.bg-gradient-to-r {
+  background-image: linear-gradient(to right, var(--tw-gradient-stops));
 }
 
 .from-\[\#0d1d31\] {
@@ -838,12 +909,28 @@ body {
   --tw-gradient-stops: var(--tw-gradient-from), var(--tw-gradient-to);
 }
 
-.to-transparent {
-  --tw-gradient-to: transparent var(--tw-gradient-to-position);
+.from-current {
+  --tw-gradient-from: currentColor var(--tw-gradient-from-position);
+  --tw-gradient-to: rgb(255 255 255 / 0) var(--tw-gradient-to-position);
+  --tw-gradient-stops: var(--tw-gradient-from), var(--tw-gradient-to);
+}
+
+.from-transparent {
+  --tw-gradient-from: transparent var(--tw-gradient-from-position);
+  --tw-gradient-to: rgb(0 0 0 / 0) var(--tw-gradient-to-position);
+  --tw-gradient-stops: var(--tw-gradient-from), var(--tw-gradient-to);
 }
 
 .to-\[\#0c0d13\] {
   --tw-gradient-to: #0c0d13 var(--tw-gradient-to-position);
+}
+
+.to-current {
+  --tw-gradient-to: currentColor var(--tw-gradient-to-position);
+}
+
+.to-transparent {
+  --tw-gradient-to: transparent var(--tw-gradient-to-position);
 }
 
 .p-4 {
@@ -936,6 +1023,11 @@ body {
   --tw-ring-offset-color: hsl(var(--background));
 }
 
+.drop-shadow {
+  --tw-drop-shadow: drop-shadow(0 1px 2px rgb(0 0 0 / 0.1)) drop-shadow(0 1px 1px rgb(0 0 0 / 0.06));
+  filter: var(--tw-blur) var(--tw-brightness) var(--tw-contrast) var(--tw-grayscale) var(--tw-hue-rotate) var(--tw-invert) var(--tw-saturate) var(--tw-sepia) var(--tw-drop-shadow);
+}
+
 .filter {
   filter: var(--tw-blur) var(--tw-brightness) var(--tw-contrast) var(--tw-grayscale) var(--tw-hue-rotate) var(--tw-invert) var(--tw-saturate) var(--tw-sepia) var(--tw-drop-shadow);
 }
@@ -944,6 +1036,10 @@ body {
   transition-property: color, background-color, border-color, text-decoration-color, fill, stroke;
   transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
   transition-duration: 150ms;
+}
+
+.ease-linear {
+  transition-timing-function: linear;
 }
 
 .ease-out {
@@ -964,8 +1060,16 @@ body {
   }
 }
 
+.ease-linear {
+  animation-timing-function: linear;
+}
+
 .ease-out {
   animation-timing-function: cubic-bezier(0, 0, 0.2, 1);
+}
+
+.repeat-infinite {
+  animation-iteration-count: infinite;
 }
 
 @media (min-width: 1024px) {
