--- a/src/styles/tailwind.css
+++ b/src/styles/tailwind.css
@@ -631,10 +631,6 @@ body {
   top: 0px;
 }
 
-.top-10 {
-  top: 2.5rem;
-}
-
 .z-40 {
   z-index: 40;
 }
@@ -659,12 +655,8 @@ body {
   display: none;
 }
 
-.h-0 {
-  height: 0px;
-}
-
-.h-0\.5 {
-  height: 0.125rem;
+.h-1\/2 {
+  height: 50%;
 }
 
 .h-10 {
@@ -687,6 +679,10 @@ body {
   height: 120%;
 }
 
+.h-\[2px\] {
+  height: 2px;
+}
+
 .h-fit {
   height: -moz-fit-content;
   height: fit-content;
@@ -696,12 +692,12 @@ body {
   height: 100%;
 }
 
-.h-\[50\%\] {
-  height: 50%;
-}
-
 .min-h-screen {
   min-height: 100vh;
+}
+
+.w-1\/2 {
+  width: 50%;
 }
 
 .w-10 {
@@ -730,19 +726,8 @@ body {
   transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
 }
 
-.rotate-\[-45deg\] {
-  --tw-rotate: -45deg;
-  transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
-}
-
 .transform {
   transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
-}
-
-@keyframes fall {
-  to {
-    transform: translate3d(-30em, 0, 0);
-  }
 }
 
 @keyframes blink {
@@ -766,34 +751,24 @@ body {
 }
 
 @keyframes tail-fade {
-  0% {
-    width: 6em;
-    opacity: 1;
-  }
-
-  50% {
-    width: 6em;
-    opacity: 1;
-  }
-
-  70% {
-    width: 0;
-    opacity: 0.4;
-  }
-
-  80% {
-    width: 0;
-    opacity: 0.4;
-  }
-
-  100% {
-    width: 0;
-    opacity: 0;
-  }
 }
 
 .animate-tail-fade {
   animation: tail-fade 9s ease-out infinite;
+}
+
+@keyframes accordion-down {
+  from {
+    height: 0;
+  }
+
+  to {
+    height: var(--radix-accordion-content-height);
+  }
+}
+
+.animate-accordion-down {
+  animation: accordion-down 0.2s ease-out;
 }
 
 .cursor-not-allowed {
@@ -909,24 +884,20 @@ body {
   --tw-gradient-stops: var(--tw-gradient-from), var(--tw-gradient-to);
 }
 
+.from-\[\#1d1d31\] {
+  --tw-gradient-from: #1d1d31 var(--tw-gradient-from-position);
+  --tw-gradient-to: rgb(29 29 49 / 0) var(--tw-gradient-to-position);
+  --tw-gradient-stops: var(--tw-gradient-from), var(--tw-gradient-to);
+}
+
 .from-current {
   --tw-gradient-from: currentColor var(--tw-gradient-from-position);
   --tw-gradient-to: rgb(255 255 255 / 0) var(--tw-gradient-to-position);
   --tw-gradient-stops: var(--tw-gradient-from), var(--tw-gradient-to);
 }
 
-.from-transparent {
-  --tw-gradient-from: transparent var(--tw-gradient-from-position);
-  --tw-gradient-to: rgb(0 0 0 / 0) var(--tw-gradient-to-position);
-  --tw-gradient-stops: var(--tw-gradient-from), var(--tw-gradient-to);
-}
-
 .to-\[\#0c0d13\] {
   --tw-gradient-to: #0c0d13 var(--tw-gradient-to-position);
-}
-
-.to-current {
-  --tw-gradient-to: currentColor var(--tw-gradient-to-position);
 }
 
 .to-transparent {
@@ -981,6 +952,11 @@ body {
 
 .text-destructive-foreground {
   color: hsl(var(--destructive-foreground));
+}
+
+.text-lime-500 {
+  --tw-text-opacity: 1;
+  color: rgb(132 204 22 / var(--tw-text-opacity));
 }
 
 .text-primary {
