--- a/src/styles/tailwind.css
+++ b/src/styles/tailwind.css
@@ -631,42 +631,6 @@ body {
   top: 0px;
 }
 
-.top-2 {
-  top: 0.5rem;
-}
-
-.top-\[\] {
-  top: ;
-}
-
-.top-\[-1\] {
-  top: -1;
-}
-
-.top-\[0\] {
-  top: 0;
-}
-
-.top-\[1px\] {
-  top: 1px;
-}
-
-.top-\[2px\] {
-  top: 2px;
-}
-
-.top-\[4px\] {
-  top: 4px;
-}
-
-.top-\[5px\] {
-  top: 5px;
-}
-
-.top-\[-5px\] {
-  top: -5px;
-}
-
 .z-40 {
   z-index: 40;
 }
@@ -689,10 +653,6 @@ body {
 
 .hidden {
   display: none;
-}
-
-.h-1\/2 {
-  height: 50%;
 }
 
 .h-10 {
@@ -732,10 +692,6 @@ body {
   min-height: 100vh;
 }
 
-.w-1\/2 {
-  width: 50%;
-}
-
 .w-10 {
   width: 2.5rem;
 }
@@ -767,6 +723,16 @@ body {
   transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
 }
 
+.rotate-\[45deg\] {
+  --tw-rotate: 45deg;
+  transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
+}
+
+.rotate-\[-45\] {
+  --tw-rotate: -45;
+  transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
+}
+
 .transform {
   transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
 }
@@ -777,8 +743,8 @@ body {
   }
 }
 
-.animate-\[blink_2s_ease-linear_infinite\] {
-  animation: blink 2s ease-linear infinite;
+.animate-\[blink_2s_ease_infinite\] {
+  animation: blink 2s ease infinite;
 }
 
 @keyframes fall {
@@ -822,21 +788,12 @@ body {
 
   100% {
     opacity: 0;
+    width: 0;
   }
 }
 
 .animate-tail-fade {
   animation: tail-fade ease-out infinite;
-}
-
-@keyframes blink {
-  50% {
-    opacity: 0.6;
-  }
-}
-
-.animate-\[blink_2s_ease_infinite\] {
-  animation: blink 2s ease infinite;
 }
 
 .cursor-not-allowed {
@@ -946,30 +903,14 @@ body {
   background-image: linear-gradient(to right, var(--tw-gradient-stops));
 }
 
-.from-\[\#0d1d31\] {
-  --tw-gradient-from: #0d1d31 var(--tw-gradient-from-position);
-  --tw-gradient-to: rgb(13 29 49 / 0) var(--tw-gradient-to-position);
-  --tw-gradient-stops: var(--tw-gradient-from), var(--tw-gradient-to);
-}
-
 .from-\[\#1d1d31\] {
   --tw-gradient-from: #1d1d31 var(--tw-gradient-from-position);
   --tw-gradient-to: rgb(29 29 49 / 0) var(--tw-gradient-to-position);
   --tw-gradient-stops: var(--tw-gradient-from), var(--tw-gradient-to);
 }
 
-.from-current {
-  --tw-gradient-from: currentColor var(--tw-gradient-from-position);
-  --tw-gradient-to: rgb(255 255 255 / 0) var(--tw-gradient-to-position);
-  --tw-gradient-stops: var(--tw-gradient-from), var(--tw-gradient-to);
-}
-
 .to-\[\#0c0d13\] {
   --tw-gradient-to: #0c0d13 var(--tw-gradient-to-position);
-}
-
-.to-transparent {
-  --tw-gradient-to: transparent var(--tw-gradient-to-position);
 }
 
 .p-4 {
@@ -1016,6 +957,11 @@ body {
 
 .font-medium {
   font-weight: 500;
+}
+
+.text-\[\#4ec0e9\] {
+  --tw-text-opacity: 1;
+  color: rgb(78 192 233 / var(--tw-text-opacity));
 }
 
 .text-destructive-foreground {
