adds down arrow for projects

--- a/src/globals.css
+++ b/src/globals.css
@@ -71,6 +71,10 @@
     @apply border-border;
   }
 
+  html {
+    scroll-behavior: smooth;
+  }
+
   body {
     @apply bg-background text-foreground min-h-screen flex flex-col overflow-x-hidden;
   }
