--- a/src/globals.css
+++ b/src/globals.css
@@ -82,4 +82,12 @@
   #root {
     @apply flex flex-col grow;
   }
+
+  /* a { */
+  /*   @apply underline text-blue-600 hover:text-blue-800 visited:text-purple-600; */
+  /* } */
+
+  .anchor {
+    @apply underline hover:no-underline visited:text-slate-600;
+  }
 }
